	* src/mensa.cpp:2088 add missing & to avoid the cursor object from
	pointing to temporary objects for names
	* src/iroster.cpp: update the constructor to avoid extra copying
	* src/ikeywords.cpp: update readTermDocFile to allow for a keyword
	to appear in multiple lines of the term document list
	* tests/Makefile.am: add test two cases to really-small to
	exercise the keyword index feature

2010-09-23 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp, src/column.cpp: reorder the locks to resolve
	complains fron helgrind

2010-09-22 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.h: update the constructor of
	fileManager::softLock to check for the value of locked_ before
	unlocking the read-write lock, which appears to address the
	problem with unlocking not-locked locks

2010-09-21 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in the destructor reverse the order of the mutex
	lock and the write lock to satisfy the helgrind (which seems to
	want them to be in the same as as they appear elsewhere in the
	code) (addresses some of problems reported by Andreas Streichardt)
	* src/fileManager.cpp: in getFile accquire read lock before the
	mutex lock (helgrind complained about lock order violation),
	remove the read lock from ibis::fileManager::recordFile (because
	it is unnecessary)
	* src/fileManager.cpp:1306 refer to undefined variable it
	* src/util.cpp: the function groupby1000 can not handle incoming
	value being 0

2010-09-20 John Wu <John dot Wu at ACM dot org>
	* src/util.h: rewrite functions ibis::util::trim and
	ibis::util::removeTail to remove the function call to strlen that
	access uninitialized variables in some cases
	* src/util.h, src/util.cpp: move strnewdup from util.h to util.cpp

2010-09-13 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp:556 remove the condition on _XOPEN_SOURCE which
	causes problems on euclid.nersc.gov with PGI compiler (fall back
	to use strtod which is present on more platforms)